# UDPSocket-ClientSide

./: .gitignore  CMakeLists.txt
src/: main.c
src/animation/: animation.c  animation.h
src/config/: Config.h
src/engine/: engine.c
src/game/: game.c  game.h  game_state.c  game_state.h
src/graphics/: sprite.c  sprite.h  texture.c  texture.h
src/input/: input.c  input.h
src/login/: login.c
src/map/: map.c  map.h
src/net/: net.c  net.h
src/protocol/: protocol.h
src/render/: map_render.c  map_render.h  render.c  render.h  render_objects.c  render_objects.h
src/screens/: screen.c
src/screens/game/: game.c  game.h
src/screens/login/: login.c
